# notebooks-scraperapi-pinecone

./: .gitignore  README.md  pyproject.toml
notebooks/: pinecone.ipynb  scraperapi_sitemap.ipynb
