[project]
name = "notebooks-scraperapi-pinecone"
version = "0.1.0"
description = "Jupyter notebooks for web-crawling and data processing with ScraperAPI and Pinecone."
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Keming He", email = "keminghe.career@gmail.com" }
]
keywords = ["jupyter", "notebooks", "scraperapi", "pinecone", "web-scraping"]

[tool.poetry]
package-mode = false
requires-poetry = ">2.0"

# Deprecated but too large to refactor without breaking changes
[tool.poetry.dependencies]
python-dotenv = "^1.0.1"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
pinecone = "^5.3.1"
langchain-pinecone = "^0.2.0"
notebook = "^7.2.2"
ipywidgets = "^8.1.5"
beautifulsoup4 = "^4.12.3"
scraperapi-sdk = "^1.5.3"
lxml = "^5.3.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
pydantic = "^2.9.2"
langchain-text-splitters = "^0.3.2"
tiktoken = "^0.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
